<resources>
    <string name="app_name">Fluz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_or_register_label">Login Or Register</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- REGISTER OR LOG -->
    <string name="welcome">Welcome to Fluz !</string>
    <string name="manage">Manage your money with zero-based budget</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="without_login">Continue without login in</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- LOGIN -->
    <string name="enter_email">Enter your email address and your password</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirm your password</string>
    <string name="user_info">Some Info About You</string>
    <string name="username">Username</string>
    <string name="currency">Currency</string>
    <string name="budget_start_date">Budget start date</string>
    <string name="continue_btn">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_day">Start Day</string>
    <string name="fixed_income">Fixed Income</string>
    <string name="add">Add</string>
    <string name="fixed_expenses">Fixed Expenses</string>
    <string name="variable_expenses">Variable Expenses</string>
    <string name="start">Start</string>

    <!-- HOME -->
    <string name="spent_on">spent on</string>

    <!-- for spinner -->
    <string-array name="Currencies">
        <item>Euro</item>
        <item>Dollar</item>
    </string-array>

    <string-array name="Days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>