<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginOrRegister">

    <fragment
        android:id="@+id/LoginOrRegister"
        android:name="com.example.fluz.LoginOrRegister"
        android:label="@string/login_or_register_label"
        tools:layout="@layout/login_or_register">

        <action
            android:id="@+id/LoginOrRegister_to_Login"
            app:destination="@id/Login" />
        <action
            android:id="@+id/action_LoginOrRegister_to_Register"
            app:destination="@id/Register" />
    </fragment>
    <fragment
        android:id="@+id/Login"
        android:name="com.example.fluz.Login"
        android:label="@string/login_label"
        tools:layout="@layout/login">

        <action
            android:id="@+id/action_Login_to_LoginOrRegister"
            app:destination="@id/LoginOrRegister" />
    </fragment>
    <fragment
        android:id="@+id/Register"
        android:name="com.example.fluz.Register"
        android:label="@string/register" >
        <action
            android:id="@+id/action_Register_to_action_LoginOrRegister"
            app:destination="@id/LoginOrRegister" />
    </fragment>
</navigation>