<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".ui.LoginOrRegister">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/manage"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="370dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="78dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textAlignment="viewStart"
        android:textColor="@color/fluz"
        android:textSize="26sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_manage"
        app:strokeColor="@color/fluz"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="370dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/fluz"
        android:text="@string/register"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="26sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:strokeColor="@color/fluz"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/txt_without_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/without_login"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_fluz"
        app:layout_constraintBottom_toTopOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>