<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginOrRegister">

    <fragment
        android:id="@+id/LoginOrRegister"
        android:name="com.example.fluz.ui.fragments.LoginOrRegister"
        android:label="@string/login_or_register_label"
        tools:layout="@layout/login_or_register">

        <action
            android:id="@+id/LoginOrRegister_to_Login"
            app:destination="@id/Login" />
        <action
            android:id="@+id/action_LoginOrRegister_to_Register"
            app:destination="@id/Register" />
    </fragment>
    <fragment
        android:id="@+id/Login"
        android:name="com.example.fluz.ui.fragments.Login"
        android:label="@string/login_label"
        tools:layout="@layout/login">

        <action
            android:id="@+id/action_Login_to_LoginOrRegister"
            app:destination="@id/LoginOrRegister" />
    </fragment>
    <fragment
        android:id="@+id/Register"
        android:name="com.example.fluz.ui.fragments.Register"
        android:label="@string/register" >

        <action
            android:id="@+id/action_Register_to_action_LoginOrRegister"
            app:destination="@id/LoginOrRegister" />

        <action
            android:id="@+id/action_Register_to_Userinfo"
            app:destination="@id/userInfo" />


        <action android:id="@+id/action_Register_to_userInfo"
            app:destination="@+id/userInfo">
        </action>


    </fragment>
    <fragment
        android:id="@+id/userInfo"
        android:name="com.example.fluz.ui.fragments.UserInfo"
        android:label="UserInfo" >
        <action
            android:id="@+id/action_userInfo_to_Register"
            app:destination="@id/Register" />
        <argument
            android:name="user_data"
            app:argType="string[]" />
    </fragment>
</navigation>