<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".ui.fragments.Login">


    <TextView
        android:id="@+id/txt_start_day"
        android:layout_width="137dp"
        android:layout_height="26dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/currency"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/currency_spinner"
        app:layout_constraintTop_toBottomOf="@+id/txt_currency" />

    <TextView
        android:id="@+id/txt_currency"
        android:layout_width="137dp"
        android:layout_height="26dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/budget_start_date"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/date_spinner"
        app:layout_constraintTop_toBottomOf="@+id/etxt_username" />

    <Spinner
        android:id="@+id/date_spinner"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/spinner_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_username" />

    <Button
        android:id="@+id/btn_continue_user_info"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/fluz"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/continue_btn"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text_user_info"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/fluz"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="364dp"
        android:layout_height="49dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_info"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/currency_spinner"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/spinner_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_spinner" />

    <EditText
        android:id="@+id/etxt_username"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

    <ImageButton
        android:id="@+id/backArrowUserInfo"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/error_text_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#D54D4D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>